# Municipal-Service-Request-Integration-Demo

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
docs/: ai-usage.md  architecture.md  platform-mapping.md
scripts/: run_api.py  run_robot_tests.py
src/integration_demo/: database.py  integration_service.py  main.py  mock_data.py  models.py  transformer.py
tests/pytest/: conftest.py  test_database.py  test_integration_service.py  test_main_api.py  test_mock_data.py  test_models.py  test_transformer.py
tests/robot/: api_tests.robot
